--- a/public_html/scoreboard.html
+++ b/public_html/scoreboard.html
@@ -3,9 +3,12 @@
         <meta charset="utf-8">
         <script src="scoreboard.js"></script>
         <style>
+            html{
+                background: white url("paper.gif") 10px 10px repeat fixed;
+            }
+
             body{
                 width: 1400px;
-                background: red url("paper.gif") 10px 10px repeat fixed;
             }
             table{
                 width: 1000px;
