--- a/public_html/scoreboard.html
+++ b/public_html/scoreboard.html
@@ -4,7 +4,7 @@
         <script src="scoreboard.js"></script>
         <style>
             html{
-                background: white url("paper.gif") 10px 10px repeat fixed;
+                background: white url("paper.gif") 10px 10px repeat scroll;
             }
 
             body{
