--- a/public_html/scoreboard.html
+++ b/public_html/scoreboard.html
@@ -23,11 +23,11 @@
                 background-color: #7788aa;
                 color: #ffffff;
             }
-            /* tbody 中的偶數對 tr(奇數可以把even改成odd) */
+            /* tbody 中的奇數對 tr(偶數可以把odd改成even) */
             tbody tr:nth-child(odd){
                 background-color: #e8e8e8;
             }
-
+            /* tbody 中的偶數對 tr(偶數可以把even改成odd) */
             tbody tr:nth-child(even){
                 background-color: #ffffff;
             }
